# FieldMate

./: README.md  README_init.md  package-lock.json
backend/: .env  .gitignore  Makefile  dockerfile.prd  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/crud/: base.py  t_recruit_games.py
backend/app/db/: base_class.py
backend/app/models/: __init__.py  t_recruit_games.py
backend/app/schemas/: received_recruit_games.py  t_recruit_games.py
backend/migrations/: env.py
backend/migrations/seeds/: base.py
backend/migrations/versions/: cbe8f83f5ec8_.py  ff78045b4e03_.py
db/: README.md  docker-compose.yml
docker/: docker-compose.yml
docs/: er_diagram.md
frontend/: .env.development  .gitignore  package-lock.json  package.json
frontend/amplify/: team-provider-info.json
frontend/amplify/.config/: project-config.json
frontend/amplify/backend/: backend-config.json
frontend/amplify/backend/auth/filemate0e97823c/: cli-inputs.json
frontend/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
frontend/src/: App.js  GameDetail.js  Games.js  Home.js  Login.js  Recruit.js  aws-exports.js  index.js
frontend/src/components/: ApplyDialog.jsx  CommentField.jsx  CommentSection.jsx  DateTimeField.jsx  EditGameDialog.jsx  GameCard.jsx  GameInfoTable.jsx  Header.jsx  LevelField.jsx  PlaceField.jsx  PlaceNameField.jsx  PriceField.jsx  SelectUserDialog.jsx  StatsCard.jsx
frontend/src/data/: config.jsx  levels.jsx  prefectures.jsx
